--- a/portfolio-apprentissage.html
+++ b/portfolio-apprentissage.html
@@ -19,6 +19,7 @@
         <a href="index.html">À PROPOS DE MOI</a>
         <a href="cv.html" class="actuel">CV</a>
         <a href="projets.html">PROJETS</a>
+        <a href="contact.html">CONTACT</a>
     </div>
     <!-- Bouton burger -->
     <div class="burger-menu" id="burger-menu">
@@ -31,6 +32,7 @@
         <a href="index.html">À PROPOS DE MOI</a>
         <a href="cv.html" class="actuel">CV</a>
         <a href="projets.html">PROJETS</a>
+        <a href="contact.html">CONTACT</a>
     </nav>
     <script src="js/script.js"></script>
 </header>
