--- a/contact.html
+++ b/contact.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="icon" type="image/png" href="img/Logo_CB.png">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
+    <script src="https://www.google.com/recaptcha/api.js" async defer></script>
 </head>
 
 <header>
@@ -78,7 +79,7 @@
 <footer>
     <div class="footer">
         <div>
-            <p>Cyprien Bons 2025</p>
+            <p>Cyprien Bons 2025 testest</p>
         </div>
         <div class="footer2">
             <div>
