--- a/contact.html
+++ b/contact.html
@@ -74,7 +74,7 @@
 <footer>
     <div class="footer">
         <div>
-            <p>Cyprien Bons 2025 testest</p>
+            <p>Cyprien Bons 2025</p>
         </div>
         <div class="footer2">
             <div>
