fix: Apprentissage Critique

--- a/portfolio-apprentissage.html
+++ b/portfolio-apprentissage.html
@@ -38,7 +38,8 @@
 </header>
 <body class="m-0">
 <div class="button-back-apprentissage">
-    <a href="cv.html" class="button button-primary button-size-md" style="width: 250px; font-size: 14px"> <!-- Garde style pour width/font-size spécifique -->
+    <a href="cv.html" class="button button-primary button-size-md" style="width: 250px; font-size: 14px">
+        <!-- Garde style pour width/font-size spécifique -->
         <p class="m-0">Revenir en arrière</p>
     </a>
 </div>
@@ -46,9 +47,9 @@
     <div>
         <div class="d-flex align-items-center justify-content-center">
             <div class="size-20x20 gradient-bg-right"></div>
-            <p class="text-page-title"><strong>Apprentissage
-                Critique</strong></p>
+            <p class="text-page-title"><strong>Apprentissage Critique</strong></p>
         </div>
+        <!-- Réaliser des applications -->
         <div class="section">
             <div class="section2-apprentissage">
                 <div class="d-flex">
@@ -57,29 +58,32 @@
                         <h3>Réaliser des applications</h3>
                     </div>
                 </div>
-                <h2>Choisir et implémenter les architectures adaptées</h2>
+                <h2>Faire des essais et évaluer leurs résultats en regard des spécifications</h2>
                 <p class="p-5-15">
-                    Lors de mon stage au BRGM pour le projet FluoGraphiX, j’ai opté pour l’utilisation de HTML,
-                    CSS et JavaScript en utilisant une architecture MVC pour le développement de l’outil,
-                    pour adapter ce dernier au cahier des charges conçu.
+                    Lors de mon stage chez Orchestra - TravelSoft, j'ai été chargé de réaliser un outil de test
+                    automatique.
+                    C'est en effectuant des essais sur de nombreux jeux de données pendant toute la durée de mon stage
+                    que j'ai acquis cette compétence.
+                    Cela m'a permis de travailler concrètement sur la qualité du code et d'identifier les améliorations
+                    nécessaires en évaluant les résultats obtenus par rapport aux spécifications attendues.
                 </p>
-                <h2>Faire évoluer une application existante</h2>
+                <h2>Adopter de bonnes pratiques de conception et de programmation</h2>
                 <p class="p-5-15">
-                    Durant mon alternance actuelle à Synapse Informatique,
-                    je suis chargé d’implémenter des nouvelles fonctionnalités pour la qualité des eaux dans l’outil
-                    existant Follow.
-                    Il s’agit donc d’une évolution de cet outil.
-                    J'ai également travaillé sur l'optimisation du code en travaillant la qualité algorithmique du code.
+                    Durant le projet, j'ai dû réaliser l'arborescence des classes de test.
+                    Comme beaucoup de tests utilisaient les mêmes fonctions,
+                    mon objectif d'éviter la redondance et de rendre les tests aussi lisibles que possible m'a poussé à
+                    adopter de bonnes pratiques de conception.
+                    C'est en structurant les classes de test de manière logique et en mutualisant les fonctions que j'ai
+                    développé cette compétence.
                 </p>
                 <h2>Intégrer des solutions dans un environnement de production</h2>
                 <p class="p-5-15">
-                    Pour le projet FluoGraphiX réalisé durant mon stage au BRGM,
-                    il a fallu déployer la solution logicielle de l’outil,
-                    adapter la solution à l’environement cible,
-                    et assurer la qualité et la maintenance du code.
-                    Le BRGM ne comptant pas de développeur dans ses rangs,
-                    j'ai pris soin de produire un code propre et lisible,
-                    en détaillant la documentation.
+                    J'ai pu intégrer mes tests dans l'environnement Qualité de l'entreprise où des tests existaient
+                    déjà.
+                    Cette intégration m'a montré comment les tests étaient mis en place dans cet environnement.
+                    J'ai aussi utilisé Allure, un outil de reporting.
+                    C'est en participant à cette intégration et en utilisant cet outil que j'ai acquis cette compétence
+                    et que cela a été très enrichissant pour ma compréhension.
                 </p>
             </div>
             <div class="section3-apprentissage">
@@ -95,17 +99,139 @@
                     - Veiller à la qualité du code et à sa documentation
                 </p>
                 <p class="p-5-15">
-                    - Choisir les ressources techniques apprpriées
+                    - Choisir les ressources techniques appropriées
                 </p>
                 <h2>Apprentissages critiques :</h2>
                 <p class="p-5-15">
-                    - Choisir et implémenter les architectures adaptées
+                    - Faire des essais et évaluer leurs résultats en regard des spécifications
                 </p>
                 <p class="p-5-15">
-                    - Faire évoluer une application existante
+                    - Adopter de bonnes pratiques de conception et de programmation
                 </p>
                 <p class="p-5-15">
                     - Intégrer des solutions dans un environnement de production
+                </p>
+            </div>
+        </div>
+        <!-- Réaliser des applications -->
+        <div class="section">
+            <div class="section2-apprentissage">
+                <div class="d-flex">
+                    <div class="size-10x50 gradient-bg-bottom"></div>
+                    <div class="px-20">
+                        <h3>Optimiser des applications</h3>
+                    </div>
+                </div>
+                <h2>Comprendre les enjeux et moyens de sécurisation des données et du code</h2>
+                <p class="p-5-15">
+                    Lors du projet e-commerce, la sécurité des données était cruciale.
+                    J'ai appris à identifier les failles et à appliquer des mesures de sécurité comme le chiffrement et
+                    la validation des entrées contre les injections SQL.
+                    C'est en étant confronté à ces impératifs et en mettant en œuvre ces solutions que j'ai compris les
+                    enjeux et les moyens de sécurisation.
+                </p>
+                <h2>Anticiper les résultats de diverses métriques</h2>
+                <p class="p-5-15">
+                    Durant mon stage chez Orchestra - TravelSoft, lancer les 350 tests automatisés prenait 6 heures.
+                    Pour optimiser mon temps, j'ai appris à bien vérifier mon code afin d'éviter les erreurs et les
+                    relances.
+                    C'est cette contrainte de temps qui a développé ma capacité à anticiper les résultats des métriques
+                    de test.
+                </p>
+                <h2>Choisir et utiliser des bibliothèques et méthodes dédiées au domaine d’application</h2>
+                <p class="p-5-15">
+                    Pour le projet Référendum, j'ai utilisé des bibliothèques pour la communication via Threads et pour
+                    la cryptographie.
+                    Cette expérience pratique m'a permis de comprendre leur fonctionnement et leur utilisation efficace.
+                    C'est en sélectionnant et en utilisant ces outils spécifiques au projet que j'ai acquis cette
+                    compétence.
+                </p>
+            </div>
+            <div class="section3-apprentissage">
+                <h3>En détails</h3>
+                <h2>Composantes essentielles :</h2>
+                <p class="p-5-15">
+                    - Formaliser et modéliser des situations complexes
+                </p>
+                <p class="p-5-15">
+                    - Recenser les algorithms et les structures de données usuelles
+                </p>
+                <p class="p-5-15">
+                    - S’appuyer sur des schémas de raisonnement
+                </p>
+                <p class="p-5-15">
+                    - Justifier les choix et valider les résultats
+                </p>
+                <h2>Apprentissages critiques :</h2>
+                <p class="p-5-15">
+                    - Comprendre les enjeux et moyens de sécurisation des données et du code
+                </p>
+                <p class="p-5-15">
+                    - Anticiper les résultats de diverses métriques
+                </p>
+                <p class="p-5-15">
+                    - Choisir et utiliser des bibliothèques et méthodes dédiées au domaine d’application
+                </p>
+            </div>
+        </div>
+        <!-- Collaborer en équipe -->
+        <div class="section">
+            <div class="section2-apprentissage">
+                <div class="d-flex">
+                    <div class="size-10x50 gradient-bg-bottom"></div>
+                    <div class="px-20">
+                        <h3>Collaborer en équipe</h3>
+                    </div>
+                </div>
+                <h2>Appréhender et Formaliser les besoins du client et de l’utilisateur</h2>
+                <p class="p-5-15">
+                    Lors du projet référendum, comprendre les besoins du client et de l'utilisateur était essentiel.
+                    La communication constante avec le client pour cerner ses attentes et s'assurer de sa satisfaction
+                    finale m'a permis de développer cette compétence d'appréhension et de formalisation des besoins.
+                </p>
+                <h2>Définir et mettre en œuvre une démarche de suivi de projet</h2>
+                <p class="p-5-15">
+                    Durant le projet référendum, j'ai participé à la définition et à la mise en œuvre d'une démarche de
+                    suivi de projet.
+                    L'utilisation de GitLab, avec ses issues et merge requests, nous permettait de suivre l'avancement à
+                    chaque sprint et de planifier les étapes suivantes.
+                    C'est cette expérience pratique avec des outils de gestion de projet qui m'a permis d'acquérir cette
+                    compétence.
+                </p>
+                <h2>Mesurer les impacts économiques, sociétaux et technologiques d’un projet informatique</h2>
+                <p class="p-5-15">
+                    Lors de mon stage chez Orchestra - TravelSoft, mon projet d'automatisation des tests a eu des
+                    impacts concrets.
+                    Il a permis à l'entreprise de gagner du temps et de l'argent, tout en soulageant une personne d'une
+                    tâche manuelle et répétitive.
+                    C'est en constatant ces bénéfices directs que j'ai pu mesurer les impacts économiques et sociétaux
+                    d'un projet informatique.
+                </p>
+            </div>
+            <div class="section3-apprentissage">
+                <h3>En détails</h3>
+                <h2>Composantes essentielles :</h2>
+                <p class="p-5-15">
+                    - Communiquer efficacement avec les différents acteurs d'un projet
+                </p>
+                <p class="p-5-15">
+                    - Respecter les règles juridiques et les normes en vigueur
+                </p>
+                <p class="p-5-15">
+                    - Sensibiliser à une gestion éthique, responsable, durable et interculturelle
+                </p>
+                <p class="p-5-15">
+                    - Adopter une démarche proactive, créative et critique
+                </p>
+                <h2>Apprentissages critiques :</h2>
+                <p class="p-5-15">
+                    - Appréhender et Formaliser les besoins du client et de l’utilisateur
+                </p>
+                <p class="p-5-15">
+                    - Définir et mettre en œuvre une démarche de suivi de projet
+                </p>
+                <p class="p-5-15">
+                    - Mesurer les impacts économiques, sociétaux et technologiques d’un projet informatique
                 </p>
             </div>
         </div>
