feat : Easter egg

--- a/cv.html
+++ b/cv.html
@@ -224,7 +224,7 @@
             <div class="sectioncv2">
                 <h3>2018 - Maintenant</h3>
                 <h2>Escalade</h2>
-                <p>Niveau max : 7C</p>
+                <p style="color: white">Niveau max : 7C</p>
                 <div class="d-flex justify-content-center">
                     <img class="image-projet" src="img/COBE-Logo.png" alt="Orchestra - TravelSoft"> <!-- L'alt text ici est incorrect, devrait être lié à l'escalade -->
                 </div>
