feat : skill-circle

--- a/cv.html
+++ b/cv.html
@@ -143,25 +143,55 @@
                 <div class="d-flex justify-content-around">
                     <div class="competencecv2">
                         <div class="competencecv">
-                            <div class="size-13x13 gradient-bg-right"></div>
+                            <div class="skill-circle" data-percent="95">
+                                <div class="skill-circle-inner">
+                                    <span class="skill-percent">95%</span>
+                                </div>
+                            </div>
                             <h2 class="font-normal">HTML/CSS</h2>
                         </div>
                         <div class="competencecv">
-                            <div class="size-13x13 gradient-bg-right"></div>
-                            <h2 class="font-normal">PHP</h2>
-                        </div>
-                        <div class="competencecv">
-                            <div class="size-13x13 gradient-bg-right"></div>
-                            <h2 class="font-normal">Java / JavaFX</h2>
+                            <div class="skill-circle" data-percent="25">
+                                <div class="skill-circle-inner">
+                                    <span class="skill-percent">25%</span>
+                                </div>
+                            </div>
+                            <h2 class="font-normal">JS</h2>
                         </div>
                     </div>
                     <div class="competencecv2">
                         <div class="competencecv">
-                            <div class="size-13x13 gradient-bg-right"></div>
+                            <div class="skill-circle" data-percent="100">
+                                <div class="skill-circle-inner">
+                                    <span class="skill-percent">100%</span>
+                                </div>
+                            </div>
+                            <h2 class="font-normal">Java / JavaFX</h2>
+                        </div>
+                        <div class="competencecv">
+                            <div class="skill-circle" data-percent="70">
+                                <div class="skill-circle-inner">
+                                    <span class="skill-percent">70%</span>
+                                </div>
+                            </div>
+                            <h2 class="font-normal">PHP</h2>
+                        </div>
+                    </div>
+                    <div class="competencecv2">
+                        <div class="competencecv">
+                            <div class="skill-circle" data-percent="75">
+                                <div class="skill-circle-inner">
+                                    <span class="skill-percent">75%</span>
+                                </div>
+                            </div>
                             <h2 class="font-normal">SQL / PL SQL</h2>
                         </div>
                         <div class="competencecv">
-                            <div class="size-13x13 gradient-bg-right"></div>
+                            <div class="skill-circle" data-percent="60">
+                                <div class="skill-circle-inner">
+                                    <span class="skill-percent">60%</span>
+                                </div>
+                            </div>
                             <h2 class="font-normal">C</h2>
                         </div>
                     </div>
@@ -172,22 +202,56 @@
                 <div class="d-flex justify-content-around">
                     <div class="competencecv2">
                         <div class="competencecv">
-                            <div class="size-13x13 gradient-bg-right"></div>
+                            <div class="skill-circle" data-percent="100">
+                                <div class="skill-circle-inner">
+                                    <span class="skill-percent">100%</span>
+                                </div>
+                            </div>
                             <h2 class="font-normal">Suite Google</h2>
                         </div>
                         <div class="competencecv">
-                            <div class="size-13x13 gradient-bg-right"></div>
+                            <div class="skill-circle" data-percent="100">
+                                <div class="skill-circle-inner">
+                                    <span class="skill-percent">100%</span>
+                                </div>
+                            </div>
                             <h2 class="font-normal">Jet Brain</h2>
                         </div>
                     </div>
                     <div class="competencecv2">
                         <div class="competencecv">
-                            <div class="size-13x13 gradient-bg-right"></div>
+                            <div class="skill-circle" data-percent="100">
+                                <div class="skill-circle-inner">
+                                    <span class="skill-percent">100%</span>
+                                </div>
+                            </div>
                             <h2 class="font-normal">GitHub</h2>
                         </div>
                         <div class="competencecv">
-                            <div class="size-13x13 gradient-bg-right"></div>
+                            <div class="skill-circle" data-percent="95">
+                                <div class="skill-circle-inner">
+                                    <span class="skill-percent">95%</span>
+                                </div>
+                            </div>
                             <h2 class="font-normal">Linux</h2>
+                        </div>
+                    </div>
+                    <div class="competencecv2">
+                        <div class="competencecv">
+                            <div class="skill-circle" data-percent="80">
+                                <div class="skill-circle-inner">
+                                    <span class="skill-percent">80%</span>
+                                </div>
+                            </div>
+                            <h2 class="font-normal">Jira</h2>
+                        </div>
+                        <div class="competencecv">
+                            <div class="skill-circle" data-percent="95">
+                                <div class="skill-circle-inner">
+                                    <span class="skill-percent">95%</span>
+                                </div>
+                            </div>
+                            <h2 class="font-normal">Excel</h2>
                         </div>
                     </div>
                 </div>
@@ -197,13 +261,21 @@
                 <div class="d-flex justify-content-around">
                     <div class="competencecv2">
                         <div class="competencecv">
-                            <div class="size-13x13 gradient-bg-right"></div>
+                            <div class="skill-circle" data-percent="100">
+                                <div class="skill-circle-inner">
+                                    <span class="skill-percent">100%</span>
+                                </div>
+                            </div>
                             <h2 class="font-normal">Francais</h2>
                         </div>
                     </div>
                     <div class="competencecv2">
                         <div class="competencecv">
-                            <div class="size-13x13 gradient-bg-right"></div>
+                            <div class="skill-circle" data-percent="70">
+                                <div class="skill-circle-inner">
+                                    <span class="skill-percent">70%</span>
+                                </div>
+                            </div>
                             <h2 class="font-normal">Anglais : B2</h2>
                         </div>
                     </div>
