--- a/cv.html
+++ b/cv.html
@@ -44,14 +44,14 @@
             <div class="size-20x20 gradient-bg-right"></div>
             <p class="text-page-title"><strong>CV</strong></p>
         </div>
-        <div class="d-flex justify-content-end" style="margin: 20px;">
-            <a href="docs/CV_BONS.pdf" class="button button-primary button-size-md" target="_blank">
-                TÉLÉCHARGER CV
-            </a>
-        </div>
         <!-- SECTION EXPÉRIENCE -->
-        <div class="mt-50">
+        <div class="d-flex justify-content-between">
             <h1>Expérience</h1>
+            <div class="px-20">
+                <a href="docs/CV_BONS.pdf" class="button button-primary button-size-md" target="_blank">
+                    TÉLÉCHARGER CV
+                </a>
+            </div>
         </div>
         <div class="section"> <!-- Stage Orchestra -->
             <div class="sectioncv2">
