--- a/portfolio-apprentissage.html
+++ b/portfolio-apprentissage.html
@@ -43,8 +43,8 @@
         <p class="m-0">Revenir en arrière</p>
     </a>
 </div>
-<div class="section1-apprentissage">
-    <div>
+<div class="base">
+    <div class="resWidth">
         <div class="d-flex align-items-center justify-content-center">
             <div class="size-20x20 gradient-bg-right"></div>
             <p class="text-page-title"><strong>Apprentissage Critique</strong></p>
