--- a/projets.html
+++ b/projets.html
@@ -38,7 +38,7 @@
     <script src="js/script.js"></script>
 </header>
 <body class="m-0">
-<div class="cvprojet">
+<div class="base">
     <div class="resWidth">
         <div class="d-flex align-items-center justify-content-center">
             <div class="size-20x20 gradient-bg-right"></div>
