--- a/cv.html
+++ b/cv.html
@@ -46,14 +46,38 @@
         </div>
         <!-- SECTION EXPÉRIENCE -->
         <div class="d-flex justify-content-between">
-            <h1>Expérience</h1>
+            <h1>Biographie</h1>
             <div class="px-20">
                 <a href="docs/CV_BONS.pdf" class="button button-primary button-size-md" target="_blank">
                     TÉLÉCHARGER CV
                 </a>
             </div>
         </div>
-        <div class="section"> <!-- Stage Orchestra -->
+        <div class="section">
+            <div class="sectioncv5">
+                <p>
+                    Depuis longtemps, j’ai toujours été <strong>passionné</strong> par l’<strong>informatique</strong>.
+                    C’est pour cela que j’ai choisi ce cursus afin de suivre le <strong>BUT Informatique</strong>,
+                    pour un métier que j’aime et dans lequel je serai heureux de m'investir</p>
+                <p>
+                    Au cours de ma formation, j’ai fait une multitude de projets qui m'ont permis de m'améliorer au niveau technique,
+                    mais aussi de perfectionner mes propres compétences. Lors de la majorité des projets, j’ai su <strong>organiser les tâches</strong>, prévoir les étapes,
+                    planifier, pour rendre le meilleur travail possible dans les temps et si possible en avance.
+                    <strong>Obtenir des résultats tangibles</strong> garantit l’efficacité des projets.</p>
+                <p>
+                    Aussi, en dehors de mes études, je suis bénévole dans un club d’escalade. Je suis impliqué dans le club, et j’aide à l’organisation de la compétition annuelle.
+                    J'aide à établir le classement lors de la compétition annuelle du club grace a mes compétences, et cela m'a beaucoup enrichi.</p>
+                <p>
+                    De plus, je sais trouver des solutions lors de projets. J’excelle à <strong>trouver des solutions</strong> réalistes à des problèmes complexes.
+                    Lors de projets, j’ai souvent donné des idées, puis les ai créées ou mises en application. Je suis très bon pour cela.</p>
+            </div>
+        </div>
+        <!-- SECTION EXPÉRIENCE -->
+        <div class="mt-50">
+            <h1>Expérience</h1>
+        </div>
+        <!-- Stage Orchestra -->
+        <div class="section">
             <div class="sectioncv2">
                 <h3>Février 2025 - Mars 2025</h3>
                 <h2>Stage - Software Engineer</h2>
