--- a/projets.html
+++ b/projets.html
@@ -44,13 +44,13 @@
             <div class="size-20x20 gradient-bg-right"></div>
             <p class="text-page-title"><strong>Projets</strong></p>
         </div>
-        <div class="section">
+        <div class="section" id="projetLegendsBuster">
             <div class="sectionprojet1">
                 <div class="d-flex">
                     <div class="size-10x50 gradient-bg-bottom"></div>
                     <div class="px-20">
                         <h3>LegendsBuster</h3>
-                        <h2 class="font-normal">Code Game Jam 2024</h2>
+                        <h2 class="font-normal">Code Game Jam - Janvier 2024</h2>
                     </div>
                 </div>
                 <p class="p-5-15">
@@ -68,13 +68,13 @@
                 <img src="img/LegendsBuster.png" alt="LegendsBuster">
             </div>
         </div>
-        <div class="section">
+        <div class="section" id="projetEcommerce">
             <div class="sectionprojet1">
                 <div class="d-flex">
                     <div class="size-10x50 gradient-bg-bottom"></div>
                     <div class="px-20">
                         <h3>Site E-Commerce</h3>
-                        <h2 class="font-normal">Projet Universitaire</h2>
+                        <h2 class="font-normal">Projet Universitaire - Novembre 2024</h2>
                     </div>
                 </div>
                 <p class="p-5-15">
@@ -93,13 +93,13 @@
                 <img src="img/site-e-commerce.png" alt="Site E-Commerce">
             </div>
         </div>
-        <div class="section">
+        <div class="section" id="projetPortfolio">
             <div class="sectionprojet1">
                 <div class="d-flex">
                     <div class="size-10x50 gradient-bg-bottom"></div>
                     <div class="px-20">
                         <h3>Site Web Portfolio</h3>
-                        <h2 class="font-normal">Projet Personnel</h2>
+                        <h2 class="font-normal">Projet Personnel - Actuellement</h2>
                     </div>
                 </div>
                 <p class="p-5-15">
@@ -117,13 +117,13 @@
                 <img src="img/site-this.png" alt="Port Folio">
             </div>
         </div>
-        <div class="section">
+        <div class="section" id="projetReferendum">
             <div class="sectionprojet1">
                 <div class="d-flex">
                     <div class="size-10x50 gradient-bg-bottom"></div>
                     <div class="px-20">
                         <h3>Référendum</h3>
-                        <h2 class="font-normal">Projet Universitaire</h2>
+                        <h2 class="font-normal">Projet Universitaire - Mai 2024</h2>
                     </div>
                 </div>
                 <p class="p-5-15">
@@ -139,13 +139,13 @@
                 <img src="img/referendum.png" alt="Referendum">
             </div>
         </div>
-        <div class="section">
+        <div class="section" id="projetExcel">
             <div class="sectionprojet1">
                 <div class="d-flex">
                     <div class="size-10x50 gradient-bg-bottom"></div>
                     <div class="px-20">
                         <h3>Excel Compétition Escalade</h3>
-                        <h2 class="font-normal">Projet Personnel</h2>
+                        <h2 class="font-normal">Projet Personnel - Actuellement</h2>
                     </div>
                 </div>
                 <p class="p-5-15">
